2009-03-30  Synge Todo <wistaria@comp-phys.org>

	* version 3.2b9 for ALPS Applications 1.3

2009-03-30  Synge Todo <wistaria@comp-phys.org>

	* Fixed estimator initialization
	
2009-03-24  Synge Todo <wistaria@comp-phys.org>

	* version 3.2b7 for ALPS Applications 1.3

2009-03-24  Synge Todo <wistaria@comp-phys.org>
	
	* Removed old alps scheduler support

2008-11-08  Synge Todo <wistaria@comp-phys.org>

	* Adapted for parapack scheduler inclusion into ALPS library
	  (To-Do: remove dependency on conventional ALPS scheduler)

	* Removed looper/integer_range.h (use alps/parapack/integer_range.h instead)

2008-10-08  Synge Todo <wistaria@comp-phys.org>

	* Update for alps-parapack new factory class

2008-01-12  Synge Todo <wistaria@comp-phys.org>
	
	* [pro] Added stand-alone reference implementations (serial and
	parallel versions) in 'standalone' directory.
	
2008-01-08  Synge Todo <wistaria@comp-phys.org>

	* version 3.2b5 for ALPS Applications 1.3

2007-10-28  Synge Todo <wistaria@comp-phys.org>
	
	* [pro] Added correlation length estimator.
	
2007-10-09  Synge Todo <wistaria@comp-phys.org>

	* Introduced SCATTERING_RATIO parameter to xyz_bond_weight_helper
	class
	
2007-10-03  Synge Todo <wistaria@comp-phys.org>

	* Fixed unimproved estimator of correlation functions for S>1/2 in
	looper/correlation.h
	
2007-07-31  Synge Todo <wistaria@comp-phys.org>

	* Added support for XYZ interaction.

2007-07-30  Synge Todo <wistaria@comp-phys.org>

	* Fixed (improved) negative sign estimator.

2007-07-01  Synge Todo <wistaria@comp-phys.org>

	* Fixed a bug in calculating weights for longitudinal external field.

2007-05-30  Synge Todo <wistaria@comp-phys.org>

	* Added linear_distance_helper in looper/lattice.h for calculating
	the 'real' linear distance between the vertices

2007-03-23  Synge Todo <wistaria@comp-phys.org>

	* Added pre_evaluator.
	
2007-03-12  Synge Todo <wistaria@comp-phys.org>
	
	* [pro] Added string order parameter.
	