@@ -28,10 +28,10 @@
 #include <iostream>
 
 /* Define the version of ALPS/looper */
-#define LOOPER_VERSION "3.2b10-20090425"
+#define LOOPER_VERSION "3.2b10-20090617"
 
 /* Define the published date of ALPS/looper */
-#define LOOPER_DATE "2009/04/25"
+#define LOOPER_DATE "2009/06/17"
 
 #define LOOPER_VERSION_STRING "ALPS/looper version " LOOPER_VERSION " (" LOOPER_DATE ")"
 
