@@ -133,7 +133,7 @@ loop_worker::loop_worker(alps::Parameters const& p)
   estimator.initialize(p, lattice, model.is_signed(), use_improved_estimator);
 }
 
-void loop_worker::init_observables(alps::Parameters const& p, alps::ObservableSet& obs) {
+void loop_worker::init_observables(alps::Parameters const&, alps::ObservableSet& obs) {
   obs << make_observable(alps::SimpleRealObservable("Temperature"));
   obs << make_observable(alps::SimpleRealObservable("Inverse Temperature"));
   obs << make_observable(alps::SimpleRealObservable("Volume"));
@@ -277,7 +277,6 @@ void loop_worker::flip(alps::ObservableSet& obs) {
       use_improved_estimator != IMPROVE()) return;
 
   int nvs = num_sites(lattice.vg());
-  int nop = operators.size();
 
   // assign cluster id
   int nc = 0;
@@ -329,13 +328,15 @@ void loop_worker::flip(alps::ObservableSet& obs) {
     ++t;
   }
   for (unsigned int s = 0; s < nvs; ++s) {
-    weight.stop_top(current[s], time_t(nop), s, spins_c[s]);
-    accum.stop_top(current[s], time_t(nop), s, spins_c[s]);
+    weight.stop_top(current[s], time_t(operators.size()), s, spins_c[s]);
+    accum.stop_top(current[s], time_t(operators.size()), s, spins_c[s]);
   }
   sign = ((negop & 1) == 1) ? -1 : 1;
 
   // accumulate cluster properties
   typename looper::collector<estimator_t>::type coll = get_collector(estimator);
+  coll.set_num_operators(operators.size());
+  coll.set_num_clusters(nc);
   if (IMPROVE())
     BOOST_FOREACH(looper::estimate<estimator_t>::type const& est, estimates) { coll += est; }
 
@@ -364,7 +365,7 @@ void loop_worker::flip(alps::ObservableSet& obs) {
   obs["Inverse Temperature"] << beta;
   obs["Volume"] << (double)lattice.volume();
   obs["Number of Sites"] << (double)num_sites(lattice.rg());
-  obs["Number of Clusters"] << (double)clusters.size();
+  obs["Number of Clusters"] << coll.num_clusters();
 
   // sign
   if (SIGN()) {
@@ -382,6 +383,7 @@ void loop_worker::flip(alps::ObservableSet& obs) {
   }
 
   // energy
+  double nop = coll.num_operators();
   double ene = model.energy_offset() - nop / beta;
   looper::energy_estimator::measurement(obs, lattice, beta, nop, sign, ene);
 
